<resources>
    <string name="accept">Accepter</string>
    <string name="activity_idserver_label">IdServer</string>
    <string name="activity_name_invalid_field_error">Field Name is invalid.</string>
    <string name="activity_name_label">Name</string>
    <string name="activity_tasks_invalid_field_error">Field Tasks is invalid.</string>
    <string name="activity_tasks_label">Tasks</string>
    <string name="add_comment">Ajoutez un commentaire...</string>
    <string name="add_user">Ajouter un collaborateur</string>
    <string name="analysis">Analyse</string>
    <string name="app_provider_description">Provider of Edycem to access data</string>
    <string name="app_provider_name">Provider of Edycem</string>
    <string name="authentication_fail">L\'authentification a échoué</string>
    <string name="authentication_ok">Vous êtes bien connecté</string>
    <string name="btn_edit">Modifier</string>
    <string name="btn_previous">Précédent</string>
    <string name="cancel">Annuler</string>
    <string name="central_test">Essai Centrale</string>
    <string name="choose_project">Choisissez un projet</string>
    <string name="choose_task">Choisissez une tâche</string>
    <string name="common_network_error">Connection error</string>
    <string name="connection">Connexion</string>
    <string name="contributors">Collaborateur :</string>
    <string name="date">Date</string>
    <string name="date_pattern">dd/MM/YYYY</string>
    <string name="deny">Refuser</string>
    <string name="enter_working_time">Entrez votre temps</string>
    <string name="experimental_site">Suivi Chantier Experimental</string>
    <string name="hours">heures</string>
    <string name="image_error_null">Image is null</string>
    <string name="job">Métier :</string>
    <string name="job_idserver_label">IdServer</string>
    <string name="job_name_invalid_field_error">Field Name is invalid.</string>
    <string name="job_name_label">Name</string>
    <string name="job_projects_invalid_field_error">Field Projects is invalid.</string>
    <string name="job_projects_label">Projects</string>
    <string name="job_users_invalid_field_error">Field Users is invalid.</string>
    <string name="job_users_label">Users</string>
    <string name="lab_test">Essai Labo</string>
    <string name="label_comment">Commentaire :</string>
    <string name="label_date">Date :</string>
    <string name="label_email">Adresse e-mail</string>
    <string name="label_id">Identifiant</string>
    <string name="label_job">Métier</string>
    <string name="label_project">Projet :</string>
    <string name="label_task">Tâche :</string>
    <string name="label_time">Temps passé :</string>
    <string name="label_user">Utilisateur</string>
    <string name="last_used">Dernier projet utilisé</string>
    <string name="logout">Déconnexion</string>
    <string name="minutes">minutes</string>
    <string name="most_used">Projets les plus utilisés</string>
    <string name="need_project">Vous devez choisir un projet</string>
    <string name="need_task">Vous devez choisir une tâche</string>
    <string name="new_project">Dernier projet ajouté</string>
    <string name="next">Suivant</string>
    <string name="no_network_error">No internet connection available</string>
    <string name="password">Mot de passe</string>
    <string name="project_activitytype_invalid_field_error">Field ActivityType is invalid.</string>
    <string name="project_activitytype_label">ActivityType</string>
    <string name="project_aspartofpulpit_label">AsPartOfPulpit</string>
    <string name="project_claimantname_invalid_field_error">Field ClaimantName is invalid.</string>
    <string name="project_claimantname_label">ClaimantName</string>
    <string name="project_company_invalid_field_error">Field Company is invalid.</string>
    <string name="project_company_label">Company</string>
    <string name="project_createdat_date_title">Select createdAt date</string>
    <string name="project_createdat_invalid_field_error">Field CreatedAt is invalid.</string>
    <string name="project_createdat_label">CreatedAt</string>
    <string name="project_createdat_time_title">Select createdAt time</string>
    <string name="project_creator_invalid_field_error">Field Creator is invalid.</string>
    <string name="project_creator_label">Creator</string>
    <string name="project_deadline_date_title">Select deadline date</string>
    <string name="project_deadline_invalid_field_error">Field Deadline is invalid.</string>
    <string name="project_deadline_label">Deadline</string>
    <string name="project_deadline_time_title">Select deadline time</string>
    <string name="project_description_invalid_field_error">Field Description is invalid.</string>
    <string name="project_description_label">Description</string>
    <string name="project_documents_invalid_field_error">Field Documents is invalid.</string>
    <string name="project_documents_label">Documents</string>
    <string name="project_eligiblecir_label">EligibleCir</string>
    <string name="project_idserver_label">IdServer</string>
    <string name="project_iseligiblecir_label">IsEligibleCir</string>
    <string name="project_isvalidate_label">IsValidate</string>
    <string name="project_job_invalid_field_error">Field Job is invalid.</string>
    <string name="project_job_label">Job</string>
    <string name="project_name">Nom du projet</string>
    <string name="project_name_invalid_field_error">Field Name is invalid.</string>
    <string name="project_name_label">Name</string>
    <string name="project_projectworkingtimes_invalid_field_error">Field ProjectWorkingTimes is invalid.</string>
    <string name="project_projectworkingtimes_label">ProjectWorkingTimes</string>
    <string name="project_relevantsite_invalid_field_error">Field RelevantSite is invalid.</string>
    <string name="project_relevantsite_label">RelevantSite</string>
    <string name="project_tag_invalid_field_error">Field Tag is invalid.</string>
    <string name="project_tag_label">Tag</string>
    <string name="project_workingtimes_invalid_field_error">Field WorkingTimes is invalid.</string>
    <string name="project_workingtimes_label">WorkingTimes</string>
    <string name="prototyping">Prototypage</string>
    <string name="rgpd">\"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.\"</string>
    <string name="see_less">Voir moins de projets</string>
    <string name="see_more">Voir plus de projets</string>
    <string name="settings_idserver_label">IdServer</string>
    <string name="settings_rgpd_invalid_field_error">Field Rgpd is invalid.</string>
    <string name="settings_rgpd_label">Rgpd</string>
    <string name="specifications">Définition du Cahier des Charges</string>
    <string name="spent_time">Temps passé</string>
    <string-array name="spinner_hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="spinner_jobs">
        <item>Prefa</item>
        <item>BPE</item>
    </string-array>
    <string-array name="spinner_min">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="spinner_users">
        <item>Firstname Lastname</item>
        <item>Firstname Lastname</item>
        <item>Firstname Lastname</item>
        <item>Firstname Lastname</item>
        <item>Firstname Lastname</item>
        <item>Firstname Lastname</item>
    </string-array>
    <string name="submit">Valider</string>
    <string name="summary">Récapitulatif</string>
    <string name="task_activity_invalid_field_error">Field Activity is invalid.</string>
    <string name="task_activity_label">Activity</string>
    <string name="task_defaulttime_invalid_field_error">Field DefaultTime is invalid.</string>
    <string name="task_defaulttime_label">DefaultTime</string>
    <string name="task_idserver_label">IdServer</string>
    <string name="task_name_invalid_field_error">Field Name is invalid.</string>
    <string name="task_name_label">Name</string>
    <string name="task_tasks_invalid_field_error">Field Tasks is invalid.</string>
    <string name="task_tasks_label">Tasks</string>
    <string name="task_taskworkingtimes_invalid_field_error">Field TaskWorkingTimes is invalid.</string>
    <string name="task_taskworkingtimes_label">TaskWorkingTimes</string>
    <string name="technic_point">Point TEchnique</string>
    <string name="technological_watch">Veille Technologique</string>
    <string name="title_activity">Choisissez une activité</string>
    <string name="title_dev">Développement Produit</string>
    <string name="title_innovation">Innovation</string>
    <string name="title_labo">Gestion Laboratoire</string>
    <string name="title_sourcing">Sourcing Produit</string>
    <string name="title_task">Choisissez une tâche</string>
    <string name="url_json_label">Json</string>
    <string name="url_url_label">Url</string>
    <string name="user">Utilisateur :</string>
    <string name="user_createdprojects_invalid_field_error">Field CreatedProjects is invalid.</string>
    <string name="user_createdprojects_label">CreatedProjects</string>
    <string name="user_datergpd_date_title">Select dateRgpd date</string>
    <string name="user_datergpd_invalid_field_error">Field DateRgpd is invalid.</string>
    <string name="user_datergpd_label">DateRgpd</string>
    <string name="user_datergpd_time_title">Select dateRgpd time</string>
    <string name="user_email_invalid_field_error">Field Email is invalid.</string>
    <string name="user_email_label">Email</string>
    <string name="user_firstname_invalid_field_error">Field Firstname is invalid.</string>
    <string name="user_firstname_label">Firstname</string>
    <string name="user_idserver_label">IdServer</string>
    <string name="user_idsmartphone_invalid_field_error">Field IdSmartphone is invalid.</string>
    <string name="user_idsmartphone_label">IdSmartphone</string>
    <string name="user_iseligible_label">IsEligible</string>
    <string name="user_job_invalid_field_error">Field Job is invalid.</string>
    <string name="user_job_label">Job</string>
    <string name="user_lastname_invalid_field_error">Field Lastname is invalid.</string>
    <string name="user_lastname_label">Lastname</string>
    <string name="user_password_invalid_field_error">Field Password is invalid.</string>
    <string name="user_password_label">Password</string>
    <string name="user_token_label">Token</string>
    <string name="user_userworkingtimes_invalid_field_error">Field UserWorkingTimes is invalid.</string>
    <string name="user_userworkingtimes_label">UserWorkingTimes</string>
    <string name="user_workingtimes_invalid_field_error">Field WorkingTimes is invalid.</string>
    <string name="user_workingtimes_label">WorkingTimes</string>
    <string name="welcome_text">Bienvenue sur votre gestionnaire de projet et de temps de travail</string>
</resources>