<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_summary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <!--<include-->
        <!--android:id="@+id/toolbar"-->
        <!--layout="@layout/toolbar"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="0dp" >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" >

            <TextView
                android:id="@+id/title_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/summary"
                android:textColor="@color/primary_color_dark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/user"
                android:textColor="@color/primary_color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_summary" />

            <TextView
                android:id="@+id/input_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/label_job"
                app:layout_constraintStart_toEndOf="@+id/label_job"
                app:layout_constraintTop_toTopOf="@+id/label_job" />


            <TextView
                android:id="@+id/label_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/job"
                android:textColor="@color/primary_color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_user" />

            <TextView
                android:id="@+id/input_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="TextView"
                app:layout_constraintBottom_toBottomOf="@+id/label_user"
                app:layout_constraintStart_toEndOf="@+id/label_user"
                app:layout_constraintTop_toTopOf="@+id/label_user" />

            <TextView
                android:id="@+id/label_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_project"
                android:textColor="@color/primary_color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_job" />

            <TextView
                android:id="@+id/label_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_task"
                android:textColor="@color/primary_color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_project" />

            <TextView
                android:id="@+id/input_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="text"
                app:layout_constraintBottom_toBottomOf="@+id/label_project"
                app:layout_constraintStart_toEndOf="@+id/label_project"
                app:layout_constraintTop_toTopOf="@+id/label_project" />

            <TextView
                android:id="@+id/label_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_date"
                android:textColor="@color/primary_color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_task" />

            <TextView
                android:id="@+id/input_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="text"
                app:layout_constraintBottom_toBottomOf="@+id/label_task"
                app:layout_constraintStart_toEndOf="@+id/label_task"
                app:layout_constraintTop_toTopOf="@+id/label_task" />

            <TextView
                android:id="@+id/label_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_time"
                android:textColor="@color/primary_color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_date" />

            <TextView
                android:id="@+id/input_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="text"
                app:layout_constraintBottom_toBottomOf="@+id/label_date"
                app:layout_constraintStart_toEndOf="@+id/label_date"
                app:layout_constraintTop_toTopOf="@+id/label_date" />

            <TextView
                android:id="@+id/label_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_comment"
                android:textColor="@color/primary_color_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_time" />

            <TextView
                android:id="@+id/input_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="290dp" />

            <TextView
                android:id="@+id/input_spent_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="text"
                app:layout_constraintBottom_toBottomOf="@+id/label_time"
                app:layout_constraintStart_toEndOf="@+id/label_comment"
                app:layout_constraintTop_toTopOf="@+id/label_time" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/button_selector_blue"
                android:onClick="firstPage"
                android:text="@string/btn_edit"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/btn_submit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_comment" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/button_selector_blue"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_edit"
                app:layout_constraintTop_toTopOf="@+id/btn_edit"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout >

    </ScrollView >

</android.support.constraint.ConstraintLayout >